3 custom hooks and add scss vars

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["ES2017", "DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -21,8 +21,9 @@
       "@common/*": ["src/common/*"],
       "@images/*": ["src/static/images/*"],
       "@pages": ["src/pages"],
+      "@utils": ["src/utils"],
     },
   },
-  "include": ["src", "**/*.d.ts"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
