--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,18 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@common/*": ["src/common/*"],
-      "@images/*": ["src/static/images/*"],
-      "@pages": ["src/pages"],
-      "@utils": ["src/utils"],
+      "@common/*": ["./common/*"],
+      "@images/*": ["./static/images/*"],
+      "@pages": ["./pages"],
+      "@utils": ["./utils"],
+      "@utils/helpers/*": ["./utils/helpers"],
+      "@utils/hooks": ["./utils/hooks"],
+      "@features": ["./features"],
+      "@static/*": ["./static/*"],
     },
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
